0.3.5.32
  - (zathor) [MP4 Muxer] fixed tmp directory handling. Bug #3129545
  - (zathor) [Update] enhanced update detection part II. Some tools may need to be reapplied.
  - (zathor) [Update] added the update date to the update window

0.3.5.31
  - (zathor) [ChapterCreator] removed error popup if more than one chapter is added within the preview window. Bug #3135824
  - (zathor) [ChapterCreator] add only a new chapter item in preview mode if no chapter item is selected. fixed the chapter number for this item. Bug #3135824
  - (zathor) [ChapterCreator] preview window will be closed together with the chapter creator window
  - (zathor) [ChapterCreator] fixed clear button. Bug #3135824
  - (zathor) [VideoPlayer] time code enabled by default
  - (kurtnoise + zathor) added flac encoding. Feature request #2930601

0.3.5.30
  - (zathor) [Update] enhanced update detection so that it is possible to downgrade a tool

0.3.5.29
  - (zathor) [Audio Downmix] enhanced avisynth script part II. Patch by tebasuna51

0.3.5.28
  - (zathor) [audio encoder] if the encoder only supports 2 channels then "keep original channels" will be removed and the default is "downmix multichannel to stereo"

0.3.5.27
  - (zathor) [File Indexer] after "on completion load files" no audio encoding could be queued. Bug #3110119
  - (zathor) [Muxer] if the mux window is not closed after queueing the output file name will be cleared
  - (zathor) [x264] added missing "final statistics" log entry
  - (zathor) [x264] extended quality mode to include 0 as a valid crf/qp GUI value
  - (zathor) [x264] fixed command line generation for --rc-lookahead with ultrafast/superfast/veryfast presets
  - (zathor) [x264] changed command line generation for --weightp with superfast/veryfast presets
  - (zathor) [x264] changed default value of --qpmin to 0 (requires x264 rev 1795+)
  - (zathor) [Audio Downmix] enhanced avisynth script. Patch by tebasuna51

0.3.5.26